--- a/superviosr-springboot-redis-mysql/java/src/main/resources/static/demo/map.html
+++ b/superviosr-springboot-redis-mysql/java/src/main/resources/static/demo/map.html
@@ -17,10 +17,10 @@
     // 百度地图API功能
     var map = new BMap.Map("allmap");    // 创建Map实例
     map.centerAndZoom(new BMap.Point(108.93, 34.27), 5);  // 初始化地图,设置中心点坐标和地图级别
-    //设置其他控件
-    //map.addControl(new BMap.NavigationControl());
-    //map.addControl(new BMap.ScaleControl());
-    //map.addControl(new BMap.OverviewMapControl());
+    map.addControl(new BMap.NavigationControl());
+    map.addControl(new BMap.ScaleControl());
+    map.addControl(new BMap.OverviewMapControl());
+    map.addControl(new BMap.MapTypeControl());
     //添加地图类型控件
     map.addControl(new BMap.MapTypeControl({
         mapTypes:[
@@ -31,9 +31,27 @@
 
     map.setCurrentCity("西安");          // 设置地图显示的城市 此项是必须设置的
     map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
-    var pt = new BMap.Point(116.417, 39.909);
 
-    var myIcon = new BMap.Icon("http://developer.baidu.com/map/jsdemo/img/fox.gif", new BMap.Size(300,157));  //定义自己的标注
-    var marker2 = new BMap.Marker(pt,{icon:myIcon});  // 创建标注
-    map.addOverlay(marker2);
+    map.addControl(new BMap.NavigationControl());
+    map.addControl(new BMap.ScaleControl());
+    map.addControl(new BMap.OverviewMapControl());
+    map.addControl(new BMap.MapTypeControl());
+    var pt;
+
+    //保证只有一个标记手动标记点
+    map.addEventListener(
+        "click", function(e){
+            var myIcon = new BMap.Icon("http://developer.baidu.com/map/jsdemo/img/fox.gif", new BMap.Size(300,157));  //定义自己的标注
+            var overlays = map.getOverlays();
+            map.removeOverlay(overlays[0])
+            pt = new BMap.Point(e.point.lng,e.point.lat);
+            var marker2 = new BMap.Marker(pt,{title:"点击标注",icon:myIcon});  // 创建标注
+            for(var i=0;i<overlays.length;i++){
+                if(overlays[i].getTitle()=="点击标注"){
+                    map.removeOverlay(overlays[i]);
+                }
+            }
+            map.addOverlay(marker2);
+        }
+    )
 </script>
