add point example

--- a/superviosr-springboot-redis-mysql/java/src/main/resources/static/index.html
+++ b/superviosr-springboot-redis-mysql/java/src/main/resources/static/index.html
@@ -8,7 +8,10 @@
     <h1>地图测试跳转页面</h1>
 
     <a href="map/toMap">
-        <button>跳转到地图页面</button>
+        <button>跳转到地图测试页面</button>
+    </a>
+    <a href="map/toMap1">
+        <button>跳转到地图测试标记页面</button>
     </a>
 </body>
 </html>
