feat: Integration Struct

--- a/superviosr-springboot-redis-mysql/java/src/main/resources/static/demo/map1.html
+++ b/superviosr-springboot-redis-mysql/java/src/main/resources/static/demo/map1.html
@@ -9,6 +9,7 @@
         #l-map{height:500px;width:100%;}
         #r-result{width:100%;}
     </style>
+    <link rel="stylesheet" type="text/css" href="../map/bmap.css">
     <script type="text/javascript" src="../map/js/bmap_offline_api_min.js">
     </script>
 </head>
@@ -166,9 +167,6 @@
     }
 
     //end
-
-
-
 
 </script>
 </body>
