--- a/superviosr-springboot-redis-mysql/java/src/main/resources/static/demo/map.html
+++ b/superviosr-springboot-redis-mysql/java/src/main/resources/static/demo/map.html
@@ -3,12 +3,14 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" type="text/css" href="../map/bmap.css">
     <style type="text/css">
-        body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
+        body, html,#map {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
     </style>
-    <script type="text/javascript" src="../map/js/bmap_offline_api_min.js"></script>
+    <script type="text/javascript" src="../map/js/apiv1.3.min.js"></script>
     <script type="text/javascript" src="../map/js/jquery-3.4.1.min.js"></script>
     <title>地图展示</title>
+
 </head>
 <body>
 <div align="center">
@@ -21,25 +23,28 @@
     <br>
     <input type="button" id="save" class="btn btn-danger" value="保存" style="width: 150px;height: 35px">
 </div>
-<div style="width: 900px;height: 500px" id="allmap"></div>
+<div style="width: 900px;height: 500px" id="map"></div>
 </div>
 </body>
 </html>
 <script type="text/javascript">
     // 百度地图API功能
-    var map = new BMap.Map("allmap");    // 创建Map实例
+    var map = new BMap.Map("map");    // 创建Map实例
     map.centerAndZoom(new BMap.Point(108.93, 34.27), 5);  // 初始化地图,设置中心点坐标和地图级别
     //控件设置
-    /*map.addControl(new BMap.NavigationControl());
-    map.addControl(new BMap.ScaleControl());
-    map.addControl(new BMap.OverviewMapControl());
-    map.addControl(new BMap.MapTypeControl());*/
+
+    map.addControl(new BMap.NavigationControl());
+    map.enableScrollWheelZoom();                  // 启用滚轮放大缩小。
+    map.enableKeyboard();
+    // map.addControl(new BMap.ScaleControl());
+    // map.addControl(new BMap.OverviewMapControl());
+    // map.addControl(new BMap.MapTypeControl());
     //添加地图类型控件
-    map.addControl(new BMap.MapTypeControl({
-        mapTypes:[
-            BMAP_NORMAL_MAP,
-            //BMAP_HYBRID_MAP
-        ]}));
+    // map.addControl(new BMap.MapTypeControl({
+    //     mapTypes:[
+    //         BMAP_NORMAL_MAP,
+    //         //BMAP_HYBRID_MAP
+    //     ]}));
 
 
     map.setCurrentCity("西安");          // 设置地图显示的城市 此项是必须设置的
